fix: align cart page with template and simplify cart UI behavior

--- a/src/assets/user/css/style.css
+++ b/src/assets/user/css/style.css
@@ -7259,6 +7259,7 @@ iframe {
 /* cart */
 .cr-table-content table {
   width: 100%;
+  table-layout: fixed;
   border: 1px solid #e9e9e9;
   border-radius: 5px;
   overflow: hidden;
@@ -7283,8 +7284,9 @@ iframe {
 .cr-table-content table tbody tr {
   border-bottom: 1px solid #e9e9e9;
 }
+.cr-table-content table thead tr .cr-cart-col-product,
 .cr-table-content table tbody tr .cr-cart-name {
-  width: 40%;
+  width: 42%;
 }
 .cr-table-content table tbody tr .cr-cart-name a {
   color: #444;
@@ -7300,19 +7302,37 @@ iframe {
       -ms-flex-align: center;
           align-items: center;
 }
+.cr-table-content table thead tr .cr-cart-col-price,
 .cr-table-content table tbody tr .cr-cart-price {
+  width: 14.5%;
   color: #555;
   font-size: 15px;
   font-weight: 500;
+  white-space: nowrap;
+  font-variant-numeric: tabular-nums;
+  text-align: center;
 }
+.cr-table-content table thead tr .cr-cart-col-total,
 .cr-table-content table tbody tr .cr-cart-subtotal {
+  width: 14.5%;
   color: #555;
-  font-weight: 500;
   font-size: 15px;
+  font-weight: 500;
+  white-space: nowrap;
+  font-variant-numeric: tabular-nums;
+  text-align: center;
 }
 .cr-table-content table tbody tr .cr-cart-remove {
-  width: 90px;
-  text-align: right;
+  width: 14.5%;
+  text-align: center;
+}
+.cr-table-content table thead tr .cr-cart-col-qty,
+.cr-table-content table tbody tr .cr-cart-qty {
+  width: 14.5%;
+}
+.cr-table-content table thead tr .cr-cart-col-action {
+  width: 14.5%;
+  text-align: center;
 }
 .cr-table-content table tbody tr .cr-cart-remove a {
   margin: 0 auto;
@@ -7325,7 +7345,7 @@ iframe {
   font-size: 22px;
 }
 .cr-table-content table tbody tr td {
-  padding: 25px 14px;
+  padding: 22px 18px;
   color: #444;
   font-size: 16px;
   text-align: left;
@@ -7342,7 +7362,7 @@ iframe {
   text-align: center;
 }
 .cr-cart-qty .cart-qty-plus-minus {
-  width: 80px;
+  width: 100px;
   height: 30px;
   margin: 0 auto;
   position: relative;
@@ -7362,24 +7382,34 @@ iframe {
           justify-content: space-between;
 }
 .cr-cart-qty .cart-qty-plus-minus input {
-  width: 30px;
+  width: 40px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 40px;
+          flex: 1 0 40px;
   margin: 0;
   padding: 0;
   background: transparent none repeat scroll 0 0;
   color: #444;
   border: medium none;
-  float: left;
   font-size: 14px;
   font-weight: 600;
   line-height: 38px;
   height: auto;
   text-align: center;
   outline: none;
+  -moz-appearance: textfield;
+          appearance: textfield;
+  font-variant-numeric: tabular-nums;
+}
+.cr-cart-qty .cart-qty-plus-minus input::-webkit-outer-spin-button,
+.cr-cart-qty .cart-qty-plus-minus input::-webkit-inner-spin-button {
+  margin: 0;
+  -webkit-appearance: none;
 }
 .cr-cart-qty .cart-qty-plus-minus button {
-  height: 25px;
-  width: 25px;
-  margin-top: -2px;
+  height: 30px;
+  width: 30px;
+  margin-top: 0;
   border: none;
   background-color: transparent;
   display: -webkit-box;
@@ -7387,10 +7417,41 @@ iframe {
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
-          justify-content: center;
+      justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+.cr-table-content table tbody tr .cr-cart-remove .btn-remove {
+  margin: 0 auto;
+  padding: 0;
+  color: #555;
+  border: none;
+  background: transparent;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  text-decoration: none;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  outline: none;
+}
+.cr-table-content table tbody tr .cr-cart-remove .btn-remove:hover,
+.cr-table-content table tbody tr .cr-cart-remove .btn-remove:hover i,
+.cr-table-content table tbody tr .cr-cart-remove .btn-remove:focus-visible,
+.cr-table-content table tbody tr .cr-cart-remove .btn-remove:focus-visible i {
+  color: #fb5555;
+}
+.cr-table-content table tbody tr .cr-cart-remove .btn-remove i {
+  font-size: 22px;
+  -webkit-transition: color 0.2s ease;
+  transition: color 0.2s ease;
 }
 
 .cr-cart-update-bottom {
